*SVN*

* Array#to_xml yields the builder just like Hash and ActiveRecord::Base.  #8472 [seth]

* Date, Time, and DateTime support formatting blocks in addition to strftime strings. Introduce :long_ordinal format, e.g. "February 21st, 2005".  #8191 [Coda Hale]

* Document Object#blank?.  #6491 [Chris Mear]

* Date, Time, and DateTime#to_json.  #8399 [wycats]

* Simplify API of assert_difference by passing in an expression that is evaluated before and after the passed in block. See documenation for examples of new API. [Marcel Molina Jr.]

* Added assert_difference and assert_no_difference to test/unit assertions [Tobias Luetke]

* Removed breakpointer and Binding.of_caller in favor of relying on ruby-debug by Kent Sibilev since the breakpointer has been broken since Ruby 1.8.4 and will not be coming back [DHH]

* Added parsing of file type in Hash.xml_in so you can easily do file uploads with base64 from an API [DHH]

    <person>
      <name>David</name>
      <avatar type="file" name="me.jpg" content_type="image/jpg">R0lGODlhkACZAPUAAM5lcfjrtMQCG=\n</avatar>
    </person>
  
  ...becomes:
  
    attributes = { :person => { :name => "David", :avatar => #<StringIO> } }
    attributes[:person][:avatar].content_type      # => "image/jpg"
    attributes[:person][:avatar].original_filename # => "me.jpg"
    attributes[:person][:avatar].read # => binary data of the file
  
  Which is duck-type compatible with the files that you get when doing multipart uploads through HTML.

* Improved multibyte performance by relying less on exception raising #8159 [Blaine]

* Use XSD-compatible type names for Hash#to_xml and make the converters extendable #8047 [Tim Pope]

* Added yielding of builder in Hash#to_xml [DHH]

* Hash#with_indifferent_access now also converts hashes kept in arrays to indifferent access (makes it easier to treat HTML and XML parameters the same) [DHH]

* Hash#to_xml supports YAML attributes.  #7502 [jonathan]
